# libtorch_vendor

./: CMakeLists.txt  Dockerfile  README.md  docker-bake.hcl  package.xml
.github/workflows/: BuildTest.yaml  Docker.yaml
bert_tokenizer/: CHANGELOG.rst  CMakeLists.txt  package.xml
bert_tokenizer/include/bert_tokenizer/: tokenizer.hpp
bert_tokenizer/include/unilib/: unicode.hpp  uninorms.hpp  unistrip.hpp  utf16.hpp  utf8.hpp  version.hpp
bert_tokenizer/src/: tokenizer.cpp
bert_tokenizer/src/unilib/: unicode.cpp  uninorms.cpp  unistrip.cpp  utf16.cpp  utf8.cpp  version.cpp
bert_tokenizer/test/: test_tokenizer.cpp
libtorch_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
torch_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
torch_msgs/msg/: DataType.msg  FP32Tensor.msg  FP64Tensor.msg  INT16Tensor.msg  INT32Tensor.msg  INT64Tensor.msg  INT8Tensor.msg  Tensor.msg  UINT8Tensor.msg
torch_tensorrt_vendor/: CMakeLists.txt  package.xml
torch_util/: CHANGELOG.rst  CMakeLists.txt  package.xml
torch_util/include/torch_util/: executor.hpp  type_adaptaion.hpp  type_adapter.hpp
torch_util/src/: component_container.cpp  component_container_mt.cpp  executor.cpp  type_adaptation.cpp  type_adapter.cpp
torch_util/test/: test_type_adapter.cpp
torchaudio_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
torchvision_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
utf8proc_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
