<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libtorch_vendor</name>
  <version>0.0.0</version>
  <description>Vendor package for libtorch</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_auto</build_depend>

  <depend version_eq="4.4.0">python3-typing-extensions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
