<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>torch_util</name>
  <version>0.0.1</version>
  <description>Utility tools for LibTorch and ROS 2.</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>libtorch_vendor</depend>
  <depend>torch_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
