<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utf8proc_vendor</name>
  <version>0.0.0</version>
  <description>vendor package for utf8proc</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_vendor_package</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
